# sample

./: README.md  build.gradle  gradle.properties  settings.gradle
app/: CMakeLists.txt  build.gradle  proguard-rules.pro
app/src/androidTest/java/com/chen/baseapplication/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: func.cpp  func.h  native-lib.cpp  nativetemp-lib.cpp
app/src/main/java/com/chen/baseapplication/: MainActivity.java
app/src/main/java/com/chen/baseapplication/TouchEvent/: MyFrameLayout.java  MyLinearLayout.java  MyTextView.java  TouchEventMainActivity.java  TouchEventUtils.java
app/src/main/java/com/chen/baseapplication/activitylanchmode/: LaunchMode2Activity.java  LaunchMode3Activity.java  LaunchMode4Activity.java  LaunchModeActivity.java
app/src/main/java/com/chen/baseapplication/animation/: AnimationMainActivity.java  ValueAnimationActivity.java
app/src/main/java/com/chen/baseapplication/animation/activity/: DrawableAnimationActivity.java  MainActivity.java  PropertyAnimationActivity.java  ViewAnimationActivity.java
app/src/main/java/com/chen/baseapplication/animation/adapter/: CustomPageAdapter.java
app/src/main/java/com/chen/baseapplication/animation/customproperty/: CustomEvaluator.java  CustomInterpolator.java
app/src/main/java/com/chen/baseapplication/animation/fragment/: LayoutAnimatorFragment.java  ObjectAnimatorFragment.java  ValueAnimatorFragment.java
app/src/main/java/com/chen/baseapplication/animation/widget/: LoadingProgressView.java  LoadingRobotProgressView.java
app/src/main/java/com/chen/baseapplication/camera/: CameraActivity.java
app/src/main/java/com/chen/baseapplication/canvas/: CanvasDrawView.java  CanvasDrawViewActivity.kt
app/src/main/java/com/chen/baseapplication/handelrThread/: HandlerThreadActivity.java
app/src/main/java/com/chen/baseapplication/jni/: JNIActivity.java  JNISample.java  JNISampleNext.java
app/src/main/java/com/chen/baseapplication/kotlin/: OneKotlinClass.kt  OnekotlinFile.kt  TwoKotlinClass.kt
app/src/main/java/com/chen/baseapplication/maxtri/: MatrixImageView.java  MaxtriDemoActivity.java
app/src/main/java/com/chen/baseapplication/opengl/: OpenGLOneActivity.java
app/src/main/java/com/chen/baseapplication/service/: MyService.java  ServiceActivity.java
app/src/main/java/com/chen/baseapplication/tagview/: TagViewActivity.java
app/src/main/java/com/chen/baseapplication/tagview/view/: ColorFactory.java  TagContainerLayout.java  TagView.java
app/src/main/java/com/chen/baseapplication/test/: InterfaceView.java  MySurfaceTexture.java  TestAddViewActivity.java
app/src/main/java/com/chen/baseapplication/widget/: PartyRoomLayout.java
app/src/main/res/anim/: res_anim_alpha.xml  res_anim_rotate.xml  res_anim_scale.xml  res_anim_set.xml  res_anim_translate.xml
app/src/main/res/drawable/: drawable_animation.xml  drawable_animation_robot.xml
app/src/main/res/layout/: activity_animation_main.xml  activity_camera.xml  activity_canvas_draw_view.xml  activity_drawableanimation.xml  activity_handler_thread.xml  activity_jni.xml  activity_launch_mode.xml  activity_launch_mode2.xml  activity_launch_mode3.xml  activity_launch_mode4.xml  activity_main.xml  activity_maxtri_demo.xml  activity_open_gl_one.xml  activity_proerty_animation.xml  activity_sevice.xml  activity_tag_view.xml  activity_test_add_view.xml  activity_touch_event_main.xml  activity_viewanimation.xml  animation_main_new.xml  content_main.xml  fragment_objectanimator.xml  fragment_valueanimator.xml
app/src/main/res/menu/: menu_main.xml  view_animation_menu.xml
app/src/main/res/values/: colors.xml
app/src/test/java/com/chen/baseapplication/: ExampleUnitTest.java
